archived/tests/interpreter/valid/grouped_expr.mochi
let value = (1 + 2) * 3
print(value)  // 9