archived/tests/interpreter/errors/invalid_slice_range.mochi
let xs = [1,2,3]
print(xs[2:1])
